[tool.poetry]
name = "python_test_framework"
version = "0.1.0"
description = "Python test automation framework for Spigit"
authors = ["vkolagi <vkolagi@planview.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.2"
uplink = "^0.9.0"
pytest-metadata = "^1.8.0"
pytest-html = "^2.0.1"
pytest-setup = {git = "https://github.com/Projectplace/pytest-setup"}
pytest-tags = {git = "https://github.com/Projectplace/pytest-tags"}
pytest-selenium = "^1.17.0"
pytest-base-url = "^1.4.1"
oauth2 = "^1.9.0"
python-dotenv = "^0.10.5"
pydantic = "^1.4"
assertpy = "^1.0"
basepage = "^1.7.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
